Fix user menu entry that was hidden by accident

--- a/addons/bestja_frontend_fpbz/static/src/css/custom.css
+++ b/addons/bestja_frontend_fpbz/static/src/css/custom.css
@@ -4,7 +4,7 @@
 
 /* Common css */
 /* Top menu changes */
-#top_menu li:first-child{
+#top_menu > li:first-child{
     display: none;
 }
 /* End of top menu changes */
