--- a/addons/bestja_frontend_ucw/static/src/css/custom.css
+++ b/addons/bestja_frontend_ucw/static/src/css/custom.css
@@ -3,7 +3,7 @@
 
 /* Common css */
 /* Top menu changes */
-#top_menu li:first-child{
+#top_menu > li:first-child{
     display: none;
 }
 
